ecommerce-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce-backend-deployment
  name: ecommerce-backend-deployment
  namespace: ecommerce
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ecommerce-backend-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-backend-deployment
      namespace: ecommerce
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: ecommerce-backend-database-connection
            optional: false
        - secretRef:
            name: ecommerce-backend-database-connection-auth-client
            optional: false
        image: huyquyet1457/ecommerce-backend:v2
        imagePullPolicy: Always
        name: ecommerce-backend
        ports:
        - containerPort: 8080
          name: tcp
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1028Mi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /run/src/main/resources/application.properties
          name: ecommerce-backend-application-properties-config-volume
          subPath: application.properties
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: ecommerce-backend-application-properties-configmap
        name: ecommerce-backend-application-properties-config-volume
