ecommerce-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce-frontend-deployment
  name: ecommerce-frontend-deployment
  namespace: ecommerce
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ecommerce-frontend-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ecommerce-frontend-deployment
      namespace: ecommerce
    spec:
      containers:
      - image: huyquyet1457/ecommerce-frontend:v1
        imagePullPolicy: Always
        name: ecommerce-frontend
        ports:
        - containerPort: 80
          name: tcp
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
