ecommerce-backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
  name: ecommerce-backend-clusterip
  namespace: ecommerce
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ecommerce-backend-deployment
  sessionAffinity: None
  type: ClusterIP
