ecommerce-frontend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-clusterip
  namespace: ecommerce
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ecommerce-frontend-deployment
  sessionAffinity: None
  type: ClusterIP
