ecommerce-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
  - host: api-ecommerce.learnk8s.vn
    http:
      paths:
      - backend:
          service:
            name: ecommerce-backend-clusterip
            port:
              number: 8080
        path: /
        pathType: Prefix
