ecommerce-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
  - host: ecommerce.learnk8s.vn
    http:
      paths:
      - backend:
          service:
            name: ecommerce-frontend-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
